--- a/app/sprinkles/account/templates/components/forms/settings-profile.html.twig
+++ b/app/sprinkles/account/templates/components/forms/settings-profile.html.twig
@@ -5,27 +5,29 @@
     <div class="box-body">
         {% include "components/csrf.html.twig" %}
 
-        <div class="form-group">
-            <label for="input-first-name" class="control-label">{{translate("NAME")}}</label>
-            <div class="row">
-                <div class="col-sm-6">
-                    <input type="text" id="input-first-name" class="form-control" name="first_name" value="{{current_user.first_name}}" placeholder="{{translate("FIRST_NAME")}}" {{page.visibility}}>
-                </div>
-                <div class="col-sm-6">
-                    <input type="text" id="input-last-name" class="form-control" name="last_name" value="{{current_user.last_name}}" placeholder="{{translate("LAST_NAME")}}" {{page.visibility}}>
+        {% block settings_profile %}
+            <div class="form-group">
+                <label for="input-first-name" class="control-label">{{translate("NAME")}}</label>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <input type="text" id="input-first-name" class="form-control" name="first_name" value="{{current_user.first_name}}" placeholder="{{translate("FIRST_NAME")}}" {{page.visibility}}>
+                    </div>
+                    <div class="col-sm-6">
+                        <input type="text" id="input-last-name" class="form-control" name="last_name" value="{{current_user.last_name}}" placeholder="{{translate("LAST_NAME")}}" {{page.visibility}}>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            <label for="input-locale" class="control-label">{{translate("LOCALE")}}</label>
-            <select id="input-locale" class="form-control js-select2" name="locale" {{page.visibility}}>
-                {% for option, label in locales %}
-                <option value="{{option}}" {% if (option == current_user.locale) %}selected{% endif %}>{{label}}</option>
-                {% endfor %}
-            </select>
-            <p class="help-block">{{translate("LOCALE.ACCOUNT")}}.</p>
-        </div>
+            <div class="form-group">
+                <label for="input-locale" class="control-label">{{translate("LOCALE")}}</label>
+                <select id="input-locale" class="form-control js-select2" name="locale" {{page.visibility}}>
+                    {% for option, label in locales %}
+                    <option value="{{option}}" {% if (option == current_user.locale) %}selected{% endif %}>{{label}}</option>
+                    {% endfor %}
+                </select>
+                <p class="help-block">{{translate("LOCALE.ACCOUNT")}}.</p>
+            </div>
+        {% endblock %}
     </div>
     <div class="box-footer text-center">
         <button type="reset" class="btn btn-default">{{translate('RESET')}}</button>
