--- a/app/sprinkles/account/templates/pages/set-password.html.twig
+++ b/app/sprinkles/account/templates/pages/set-password.html.twig
@@ -1,9 +1,9 @@
 {% extends "layouts/basic.html.twig" %}
 
 {# Overrides blocks in head of base template #}
-{% block page_title %}Create Password{% endblock %}
+{% block page_title %}{{translate("PASSWORD.CREATE")}}{% endblock %}
 
-{% block page_description %}Choose a password for your account.{% endblock %}
+{% block page_description %}{{translate("PASSWORD.CREATE.PAGE")}}{% endblock %}
 
 {% block body_attributes %}
     class="hold-transition login-page"
@@ -17,8 +17,8 @@
     <!-- /.login-logo -->
 
     <div class="login-box-body login-form">
-        <p class="login-box-msg"><strong>Create Password</strong></p>
-        <p class="login-box-msg">Welcome to {{site.title}}!  Please create a password for your new account.</p>
+        <p class="login-box-msg"><strong>{{translate("PASSWORD.CREATE")}}</strong></p>
+        <p class="login-box-msg">{{translate("WELCOME_TO", {'title': site.title})}} {{translate("PASSWORD.CREATE.PAGE")}}</p>
 
         <div class="form-alerts" id="alerts-page"></div>
 
@@ -29,15 +29,15 @@
             <input type="password" style="display:none">
 
             <div class="form-group">
-                <label class="sr-only" for="form-password">Password</label>
-                <input type="password" name="password" placeholder="Choose a password, 12-100 characters" class="form-control" id="form-password">
+                <label class="sr-only" for="form-password">{{translate('PASSWORD')}}</label>
+                <input type="password" name="password" placeholder="{{translate('PASSWORD.BETWEEN', {min: 12, max: 100})}}" class="form-control" id="form-password">
             </div>
             <div class="form-group">
-                <label class="sr-only" for="form-passwordc">Re-enter Password</label>
-                <input type="password" name="passwordc" placeholder="Re-enter your password" class="form-control" id="form-passwordc">
+                <label class="sr-only" for="form-passwordc">{{translate('PASSWORD.CONFIRM')}}</label>
+                <input type="password" name="passwordc" placeholder="{{translate('PASSWORD.CONFIRM')}}" class="form-control" id="form-passwordc">
             </div>
             <input type="hidden" name="token" value="{{token}}">
-            <button type="submit" class="btn btn-block btn-primary">Set Password and Sign In</button>
+            <button type="submit" class="btn btn-block btn-primary">{{translate('PASSWORD.CREATE.SET')}}</button>
         </form>
     </div>
     <!-- /.login-box-body -->
