Added fruther trasnlations

--- a/app/sprinkles/account/templates/pages/register.html.twig
+++ b/app/sprinkles/account/templates/pages/register.html.twig
@@ -82,7 +82,7 @@
                 <button type="submit" class="btn btn-block btn-primary">{{translate('REGISTER_ME')}}</button>
             </div>
             <div style="padding-top: 10px;">
-                {{translate('SIGN_IN_HERE', {'url' : "#{site.uri.public}/account/sign-in"}) | raw}}
+                {{translate('SIGN_IN_HERE', {'url' : '#{site.uri.public}/account/sign-in'}) | raw}}
             </div>
         </form>
     </div>
