--- a/app/sprinkles/account/templates/pages/error/compromised.html.twig
+++ b/app/sprinkles/account/templates/pages/error/compromised.html.twig
@@ -4,4 +4,8 @@
 
 {% block page_description %}{{ translate('ACCOUNT.SESSION_COMPROMISED.TITLE') }}{% endblock %}
 
-{% block heading %}<i class="fa fa-warning text-yellow"></i> {{ translate('ACCOUNT.SESSION_COMPROMISED.TEXT', {'url' : '#{site.uri.public}/account/sign-in'}) | raw }}{% endblock %}
+{% block heading %}
+    <i class="fa fa-warning text-yellow"></i> {{ translate('ACCOUNT.SESSION_COMPROMISED.TEXT', {
+        'url' : site.uri.public ~ '/account/sign-in'
+    }) | raw }}
+{% endblock %}
