--- a/app/sprinkles/account/templates/pages/register.html.twig
+++ b/app/sprinkles/account/templates/pages/register.html.twig
@@ -42,7 +42,7 @@
             </div>
             <div class="form-group">
                 <label for="r-form-username">{{translate('USERNAME')}}</label>
-                <span class="pull-right"><a href="#" id="form-register-username-suggest">[{{translate("SUGGEST")}}]</a></span>
+                <span class="pull-right"><a href="#" id="form-register-username-suggest">[{{translate('SUGGEST')}}]</a></span>
                 <input type="text" name="user_name" placeholder="{{translate('USERNAME.CHOOSE')}}" class="form-control" id="r-form-username" autocomplete="off">
             </div>
             <div class="form-group">
@@ -82,7 +82,9 @@
                 <button type="submit" class="btn btn-block btn-primary">{{translate('REGISTER_ME')}}</button>
             </div>
             <div style="padding-top: 10px;">
-                {{translate('SIGN_IN_HERE', {'url' : '#{site.uri.public}/account/sign-in'}) | raw}}
+                {{translate('SIGN_IN_HERE', {
+                    'url' : site.uri.public ~'/account/sign-in'
+                }) | raw}}
             </div>
         </form>
     </div>
