--- a/app/sprinkles/account/templates/navigation/user-card.html.twig
+++ b/app/sprinkles/account/templates/navigation/user-card.html.twig
@@ -22,7 +22,9 @@
       <!-- Menu Footer-->
       <li class="user-footer">
           {% block userCard_menu %}
-              <a href="{{site.uri.public}}/account/settings" class="btn btn-default btn-flat btn-block">{{translate("ACCOUNT.MY")}}</a>
+              {% if checkAccess('uri_account_settings') %}
+                <a href="{{site.uri.public}}/account/settings" class="btn btn-default btn-flat btn-block">{{translate("ACCOUNT.MY")}}</a>
+              {% endif %}
               <a href="{{site.uri.public}}/account/logout" class="btn btn-default btn-flat btn-block">{{translate("LOGOUT")}}</a>
           {% endblock %}
       </li>
