--- a/app/sprinkles/account/templates/navigation/user-card.html.twig
+++ b/app/sprinkles/account/templates/navigation/user-card.html.twig
@@ -4,6 +4,7 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
       <img src="{{ current_user.avatar }}" class="user-image" alt="User Image">
       <span class="hidden-xs">{{current_user.first_name}} {{current_user.last_name}}</span>
+      <i class="fa fa-chevron-down" style="padding-left: .5em;"></i>
     </a>
     {% endblock %}
     <ul class="dropdown-menu">
