--- a/app/sprinkles/account/templates/navigation/user-card.html.twig
+++ b/app/sprinkles/account/templates/navigation/user-card.html.twig
@@ -4,7 +4,7 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
       <img src="{{ current_user.avatar }}" class="user-image" alt="User Image">
       <span class="hidden-xs">{{current_user.first_name}} {{current_user.last_name}}</span>
-      <i class="fa fa-chevron-down" style="padding-left: .5em;"></i>
+      <i class="fa fa-chevron-down" id="user-menu-chevron"></i>
     </a>
     {% endblock %}
     <ul class="dropdown-menu">
@@ -12,7 +12,6 @@
       <!-- User image -->
       <li class="user-header">
         <img src="{{ current_user.avatar }}" class="img-circle" alt="User Image">
-
         <p>
           {{current_user.first_name}} {{current_user.last_name}}
           <small>({{current_user.user_name}})</small>
