--- a/app/sprinkles/admin/templates/pages/users.html.twig
+++ b/app/sprinkles/admin/templates/pages/users.html.twig
@@ -15,7 +15,7 @@
         <div class="col-md-12">
             <div id="widget-users" class="box box-primary">
                 <div class="box-header">
-                    <h3 class="box-title pull-left"><i class="fa fa-fw fa-user"></i> {{translate('USER', 2)}}</h3>
+                    <h3 class="box-title"><i class="fa fa-fw fa-user"></i> {{translate('USER', 2)}}</h3>
                     {% include "tables/table-tool-menu.html.twig" %}
                 </div>
                 <div class="box-body">
