--- a/app/sprinkles/admin/templates/pages/role.html.twig
+++ b/app/sprinkles/admin/templates/pages/role.html.twig
@@ -51,7 +51,7 @@
                 </div>
                 <div class="box-body box-profile">
                     <div class="text-center">
-                        <i class="fa fa-drivers-license fa-5x"></i>
+                        <i class="fa fa-id-card fa-5x"></i>
                     </div>
 
                     <h3 class="profile-username text-center">{{role.name}}</h3>
