--- a/app/sprinkles/admin/templates/tables/users.html.twig
+++ b/app/sprinkles/admin/templates/tables/users.html.twig
@@ -109,7 +109,7 @@
                     </li>
                     <li>
                         <a href="#" data-user_name="{{row.user_name}}" class="js-user-roles">
-                        <i class="fa fa-drivers-license"></i> {% endverbatim %}{{translate("ROLE.MANAGE")}}{% verbatim %}
+                        <i class="fa fa-id-card"></i> {% endverbatim %}{{translate("ROLE.MANAGE")}}{% verbatim %}
                         </a>
                     </li>
                     <li>
