--- a/app/sprinkles/admin/templates/pages/dashboard.html.twig
+++ b/app/sprinkles/admin/templates/pages/dashboard.html.twig
@@ -26,7 +26,7 @@
         <div class="col-md-4 col-sm-6 col-xs-12">
           <a href="{{site.uri.public}}/roles">
             <div class="info-box">
-              <span class="info-box-icon bg-red"><i class="fa fa-drivers-license"></i></span>
+              <span class="info-box-icon bg-red"><i class="fa fa-id-card"></i></span>
               <div class="info-box-content">
                 <span class="info-box-text">{{ translate("ROLE", 2) }}</span>
                 <span class="info-box-number">{{counter.roles}}</span>
