--- a/app/sprinkles/admin/templates/pages/roles.html.twig
+++ b/app/sprinkles/admin/templates/pages/roles.html.twig
@@ -15,7 +15,7 @@
         <div class="col-md-12">
             <div id="widget-roles" class="box box-primary">
                 <div class="box-header">
-                    <h3 class="box-title"><i class="fa fa-fw fa-drivers-license"></i> {{translate('ROLE', 2)}}</h3>
+                    <h3 class="box-title"><i class="fa fa-fw fa-id-card"></i> {{translate('ROLE', 2)}}</h3>
                     {% include "tables/table-tool-menu.html.twig" %}
                 </div>
                 <div class="panel-body">
