Update FA5 icon prefix 'fa' to 'fas' to align with new conventions

--- a/app/sprinkles/account/templates/forms/settings-account.html.twig
+++ b/app/sprinkles/account/templates/forms/settings-account.html.twig
@@ -1,6 +1,6 @@
 <form id="account-settings" role="form" action="{{site.uri.public}}/account/settings" method="post">
     <div class="box-header">
-        <h3 class="box-title"><i class="fa fa-gear fa-fw"></i> {{translate("ACCOUNT.SETTINGS")}}</h3>
+        <h3 class="box-title"><i class="fas fa-gear fa-fw"></i> {{translate("ACCOUNT.SETTINGS")}}</h3>
     </div>
     <div class="box-body">
         {% include "forms/csrf.html.twig" %}
