--- a/app/sprinkles/account/templates/navigation/user-card.html.twig
+++ b/app/sprinkles/account/templates/navigation/user-card.html.twig
@@ -4,7 +4,7 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
       <img src="{{ current_user.avatar }}" class="user-image" alt="User Image">
       <span class="hidden-xs">{{current_user.first_name}} {{current_user.last_name}}</span>
-      <i class="fa fa-chevron-down"></i>
+      <i class="fas fa-chevron-down"></i>
     </a>
     {% endblock %}
     <ul class="dropdown-menu">
