--- a/app/sprinkles/account/templates/forms/settings-profile.html.twig
+++ b/app/sprinkles/account/templates/forms/settings-profile.html.twig
@@ -1,6 +1,6 @@
 <form id="profile-settings" role="form" action="{{site.uri.public}}/account/settings/profile" method="post">
     <div class="box-header">
-        <h3 class="box-title"><i class="fa fa-user fa-fw"></i> {{translate("PROFILE.SETTINGS")}}</h3>
+        <h3 class="box-title"><i class="fas fa-user fa-fw"></i> {{translate("PROFILE.SETTINGS")}}</h3>
     </div>
     <div class="box-body">
         {% include "forms/csrf.html.twig" %}
