--- a/app/sprinkles/admin/templates/modals/user-set-password.html.twig
+++ b/app/sprinkles/admin/templates/modals/user-set-password.html.twig
@@ -31,14 +31,14 @@
                     <div class="form-group">
                         <label>{{translate('PASSWORD')}}</label>
                         <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-key"></i></span>
+                            <span class="input-group-addon"><i class="fas fa-key"></i></span>
                             <input type="password" class="form-control" name="value" autocomplete="off" value="" placeholder="{{translate("PASSWORD.BETWEEN", {min: 12, max: 50})}}">
                         </div>
                     </div>
                     <div class="form-group">
                         <label>{{translate('PASSWORD.CONFIRM')}}</label>
                         <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-key"></i></span>
+                            <span class="input-group-addon"><i class="fas fa-key"></i></span>
                             <input type="password" class="form-control" name="passwordc" autocomplete="off" value="" placeholder="{{translate('PASSWORD.CONFIRM')}}">
                         </div>
                     </div>
