--- a/app/sprinkles/account/templates/pages/register.html.twig
+++ b/app/sprinkles/account/templates/pages/register.html.twig
@@ -53,6 +53,7 @@
                 <label class="sr-only" for="r-form-passwordc">{{translate('PASSWORD.CONFIRM')}}</label>
                 <input type="password" name="passwordc" placeholder="{{translate('PASSWORD.CONFIRM')}}" class="form-control" id="r-form-passwordc">
             </div>
+            {% if 'locale' not in fields.hidden %}
             <div class="form-group">
                 <label for="r-form-locale" class="control-label">{{translate("LOCALE")}}</label>
                 <select id="r-form-locale" class="form-control js-select2" name="locale">
@@ -64,6 +65,7 @@
                 </select>
                 <p class="help-block">{{translate("LOCALE.ACCOUNT")}}.</p>
             </div>
+            {% endif %}
             {% if site.registration.captcha %}
                 <div class="form-group">
                     <label class="sr-only" for="r-form-passwordc">{{translate('CAPTCHA.VERIFY')}}</label>
