Force password change before login if password is compromised

--- a/app/sprinkles/account/templates/pages/password-reset-required.html.twig
+++ b/app/sprinkles/account/templates/pages/password-reset-required.html.twig
@@ -18,7 +18,8 @@
 
     <div class="login-box-body login-form">
         <p class="login-box-msg"><strong>{{translate("PASSWORD.RESET.REQUIRED")}}</strong></p>
-        <p class="login-box-msg">{{translate("PASSWORD.FORGET.EMAIL")}}</p>
+        <p class="login-box-msg">{{page.messages.reason}}</p>
+        <p class="login-box-msg">{{page.messages.email}}</p>
 
         <div class="form-alerts" id="alerts-page"></div>
 
