Revert "Merge branch 'develop' into add-missing-locale-keys"
This reverts commit 963cc861dd025091e7bfdbbc4550f4c7a395e9f3, reversing
changes made to cdd8a12ec293cc355ba54c679450c67ec1e8e582.

--- a/app/sprinkles/account/templates/forms/settings-account.html.twig
+++ b/app/sprinkles/account/templates/forms/settings-account.html.twig
@@ -16,7 +16,7 @@
             {% if page.visibility != "disabled" %}
                 <div class="form-group">
                     <label for="input-password" class="control-label">{{translate("PASSWORD.NEW")}}</label>
-                    <input type="password" id="input-password" class="form-control" name="password" placeholder="{{translate("PASSWORD.BETWEEN", {min: site.password.length.min, max: site.password.length.max})}} ({{translate("OPTIONAL")}})">
+                    <input type="password" id="input-password" class="form-control" name="password" placeholder="{{translate("PASSWORD.BETWEEN", {min: 12, max: 100})}} ({{translate("OPTIONAL")}})">
                 </div>
                 <div class="form-group">
                     <label for="input-passwordc" class="control-label">{{translate("PASSWORD.CONFIRM_NEW")}}</label>
