--- a/app/sprinkles/account/templates/pages/set-password.html.twig
+++ b/app/sprinkles/account/templates/pages/set-password.html.twig
@@ -30,7 +30,7 @@
 
             <div class="form-group">
                 <label class="sr-only" for="form-password">{{translate('PASSWORD')}}</label>
-                <input type="password" name="password" placeholder="{{translate('PASSWORD.BETWEEN', {min: site.password.length.min, max: site.password.length.max})}}" class="form-control" id="form-password">
+                <input type="password" name="password" placeholder="{{translate('PASSWORD.BETWEEN', {min: 12, max: 100})}}" class="form-control" id="form-password">
             </div>
             <div class="form-group">
                 <label class="sr-only" for="form-passwordc">{{translate('PASSWORD.CONFIRM')}}</label>
