--- a/app/sprinkles/admin/templates/tables/groups.html.twig
+++ b/app/sprinkles/admin/templates/tables/groups.html.twig
@@ -58,7 +58,7 @@
                     </li>
                     <li>
                         <a href="#" data-slug="{{row.slug}}" class="js-group-delete">
-                        <i class="fas fa-trash-o"></i> {% endverbatim %}{{translate("GROUP.DELETE")}}{% verbatim %}
+                        <i class="fas fa-trash-alt"></i> {% endverbatim %}{{translate("GROUP.DELETE")}}{% verbatim %}
                         </a>
                     </li>
                 </ul>
