--- a/app/sprinkles/admin/templates/tables/roles.html.twig
+++ b/app/sprinkles/admin/templates/tables/roles.html.twig
@@ -63,7 +63,7 @@
                     </li>
                     <li>
                         <a href="#" data-slug="{{row.slug}}" class="js-role-delete">
-                        <i class="fas fa-trash-o"></i> {% endverbatim %}{{translate("ROLE.DELETE")}}{% verbatim %}
+                        <i class="fas fa-trash-alt"></i> {% endverbatim %}{{translate("ROLE.DELETE")}}{% verbatim %}
                         </a>
                     </li>
                 </ul>
