--- a/app/sprinkles/admin/templates/tables/users.html.twig
+++ b/app/sprinkles/admin/templates/tables/users.html.twig
@@ -130,7 +130,7 @@
                     </li>
                     <li>
                         <a href="#" data-user_name="{{row.user_name}}" class="js-user-delete">
-                        <i class="fas fa-trash-o"></i> {% endverbatim %}{{translate("USER.DELETE")}}{% verbatim %}
+                        <i class="fas fa-trash-alt"></i> {% endverbatim %}{{translate("USER.DELETE")}}{% verbatim %}
                         </a>
                     </li>
                 </ul>
