--- a/app/templates/pages/error/error.html.twig
+++ b/app/templates/pages/error/error.html.twig
@@ -13,13 +13,14 @@
             {% block headline %}<h2 class="headline text-red"><i class="fas fa-terminal" aria-hidden="true"></i></h2>{% endblock %}
 
             <div class="error-content">
-              <br /><h3>{% block heading %}<i class="fas fa-warning text-red"></i> {{ translate('ERROR.ENCOUNTERED') }}{% endblock %}</h3>
+              <br /><h3>{% block heading %}<i class="fas fa-warning text-red"></i>{{ translate('ERROR.ENCOUNTERED') }}{% endblock %}</h3>
 
               {% block content %}
-                  {% if messages %}<p>{{ translate('ERROR.DETAIL') }}</p>{% endif %}
-                  {% for message in messages %}
-                    <div class="alert alert-danger">{{ translate(message.message, message.parameters) }}</div>
-                  {% endfor %}
+                  {% if description or title %}<p>{{ translate('ERROR.DETAIL') }}</p>{% endif %}
+                  <div class="alert alert-danger">
+                      <p><strong>{{ title }}</strong></p>
+                      <p>{{ description }}</p>
+                  </div>
                   <p class="lead">{{ translate('ERROR.RETURN', {url : site.uri.public})|raw }}</p>
               {% endblock %}
             </div>
