--- a/app/templates/pages/legal.html.twig
+++ b/app/templates/pages/legal.html.twig
@@ -8,5 +8,5 @@
 {% block page_description %}{{translate("LEGAL.DESCRIPTION")}}{% endblock %}
 
 {% block body_matter %}
-    {% include 'pages/partials/legal.html.twig' %}
+    {% include 'content/legal.html.twig' %}
 {% endblock %}
