--- a/app/templates/pages/privacy.html.twig
+++ b/app/templates/pages/privacy.html.twig
@@ -8,5 +8,5 @@
 {% block page_description %}{{translate("PRIVACY.DESCRIPTION")}}{% endblock %}
 
 {% block body_matter %}
-    {% include 'pages/partials/privacy.html.twig' %}
+    {% include 'content/privacy.html.twig' %}
 {% endblock %}
