--- a/app/templates/content/favicons.html.twig
+++ b/app/templates/content/favicons.html.twig
@@ -1,3 +1,4 @@
+{# This file should contain the favicon definition. It will be injected into the base template headers #}
 {# Favicons generated with https://realfavicongenerator.net #}
 
 <link rel="apple-touch-icon" sizes="180x180" href="{{ asset('assets/favicons/apple-touch-icon.png') }}">
