--- a/app/templates/content/favicons.html.twig
+++ b/app/templates/content/favicons.html.twig
@@ -4,9 +4,8 @@
 <link rel="apple-touch-icon" sizes="180x180" href="{{ asset('assets/favicons/apple-touch-icon.png') }}">
 <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('assets/favicons/favicon-32x32.png') }}">
 <link rel="icon" type="image/png" sizes="16x16" href="{{ asset('assets/favicons/favicon-16x16.png') }}">
-<link rel="manifest" href="{{ asset('assets/favicons/site.webmanifest') }}">
+<link rel="manifest" href="{{ asset('assets/favicons/manifest.json') }}">
 <link rel="mask-icon" href="{{ asset('assets/favicons/safari-pinned-tab.svg') }}" color="#5bbad5">
 <link rel="shortcut icon" href="{{ asset('assets/favicons/favicon.ico') }}">
 <meta name="msapplication-TileColor" content="#bd61d5">
-<meta name="msapplication-config" content="{{ asset('assets/favicons/browserconfig.xml') }}">
 <meta name="theme-color" content="#ffffff">
